# claude-guides

./: README.md
docs/claude-ai-archive/: Awesome_Claude_Code_开发指引手册.docx  Awesome_Claude_Code_开发指引手册_v2.docx  Chrome滚动截屏扩展_开发方案.md  Claude.ai 网页端高效使用完全指南.md  Claude插件开发方案.docx  DEVELOPMENT_ROADMAP.md  INDEX.md  Native_Messaging_Host集成方案.md  PDF转Markdown自动化开发方案.md  VSCode_Claude_Code_Git_Worktree并行开发指南.md  VSCode双项目并行开发操作指南.md  VSCode并行开发指南_Worktree与多项目.md  claude-tampermonkey-dev-plan.md  scroll-capture-开发过程指南.md  中国网站ICP与公安备案完全指南.md  复杂多步骤浏览器自动化_Playwright_CLI与MCP深度研究.md  浏览器自动操作Claude网页版研究报告.md  网页分享页生成器_开发思路.md  避免Claude回复中断_完整指引.md
guides/: 01-account-safety.md  02-data-backup.md  03-efficiency.md  04-claude-code.md
templates/: CLAUDE.md.template
templates/hooks/: pre-commit
templates/slash-commands/: doc.md  review.md  test.md
tools/claude-guard/: audit.py  backup.py  cli.py  patterns.py  pyproject.toml  scanner.py
